fixed NavBar on all pages. Fixed Overlapping on all pages. Found a bug in code when filter by race.

--- a/src/navBar/NavBar.css
+++ b/src/navBar/NavBar.css
@@ -1,14 +1,15 @@
-.navigation-menu {
-
-    position: relative;
-    width: 100vw;
-    height: 104px; 
-}
 .headerContainer {
-    position: absolute;
+    z-index: 3;
+    position: fixed;
     height: 104px;
     background: #667d60;
     box-shadow: 0px 24px 24px rgba(0, 0, 0, 0.15);
+}
+.navigation-menu {
+    position: relative;
+    width: 100vw;
+    height: 104px; 
+    padding-bottom: 100px;
 }
 .logo{
     display: flex;
